# Amulet-Minecraft-Worlds

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml
src/amulet/minecraft_worlds/: __init__.py  level_data.py
src/amulet/minecraft_worlds/worlds_src/: __init__.py
src/amulet/minecraft_worlds/worlds_src/bedrock/vanilla/1_16/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/bedrock/vanilla/1_17_20/caves_and_cliffs/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/bedrock/vanilla/1_17_20/vanilla/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/bedrock/vanilla/1_17_40/caves_and_cliffs/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/bedrock/vanilla/1_17_40/superflat/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/bedrock/vanilla/1_17_40/vanilla/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/bedrock/vanilla/1_18/superflat/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/bedrock/vanilla/1_18/updated_superflat/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/java/forge/1_12_2_twilight_forest/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/java/forge/1_16_5_twilight_forest/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/java/vanilla/1_12_2/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/java/vanilla/1_13/: world_test_data.json
src/amulet/minecraft_worlds/worlds_src/java/vanilla/1_16_5_dimension/: world_test_data.json
(+12 files in other folders)
